--- a/resources/assets/sass/ui/dashboard/_content.scss
+++ b/resources/assets/sass/ui/dashboard/_content.scss
@@ -35,6 +35,7 @@
 
   @media (min-width: 560px) {
     display: flex;
+    flex-wrap: wrap;
   }
 
   @media (max-width: 760px) {
@@ -47,14 +48,20 @@
 
   .column {
     width: 40%;
+    margin-right: 5rem;
+    margin-bottom: 5rem;
 
-    @media (max-width: 1219px) {
+    // Minimum width for the table
+    min-width: 464px;
+
+    @media (max-width: 1213px) {
       width: 100%;
       max-width: 464px;
     }
 
     @media (max-width: 560px) {
       margin-bottom: 5rem;
+      margin-right: 0;
 
       &:last-of-type {
         margin-bottom: 0;
