--- a/resources/assets/sass/ui/general/_tables.scss
+++ b/resources/assets/sass/ui/general/_tables.scss
@@ -55,8 +55,7 @@ body {
   }
 
   table {
-    width: 90vw;
-    max-width: 100vw;
+    width: 100%;
     border: 0;
 
     @media (max-width: 560px) {
